<?xml version="1.0"?>
<package format="2">
  <name>tamagawa_imu_driver</name>
  <version>1.0.0</version>
  <description>The ROS driver for TAMAGAWA SEIKI IMUs</description>

  <maintainer email="osamu.sekino@tier4.jp">Osamu Sekino</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
  </export>
</package>
