<?xml version="1.0"?>
<package format="2">
  <name>tamagawa_imu_driver</name>
  <version>1.0.0</version>
  <description>The ROS driver for TAMAGAWA SEIKI IMUs</description>

  <maintainer email="osamu.sekino@tier4.jp">Osamu Sekino</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>can_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

  <!-- <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>can_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>can_msgs</build_export_depend>
  <build_export_depend>diagnostic_msgs</build_export_depend>
  <build_export_depend>diagnostic_updater</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>can_msgs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>diagnostic_updater</exec_depend> -->

  <export>
  </export>
</package>
