<?xml version="1.0"?>
<package format="2">
  <name>tamagawa_imu_driver</name>
  <version>1.0.0</version>
  <description>The ROS driver for TAMAGAWA SEIKI IMUs</description>

  <maintainer email="osamu.sekino@tier4.jp">Osamu Sekino</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

	<depend>ament_lint_auto</depend>
	<depend>ament_lint_common</depend>
	<depend>rclcpp</depend>
	<depend>rclcpp_components</depend>
	<depend>can_msgs</depend>
	<depend>sensor_msgs</depend>
	<depend>diagnostic_updater</depend>


	<export>
	  <build_type>ament_cmake</build_type>
	</export>

</package>
